--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           submodules: true
 #       - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
+      - run: sudo apt install qt5-default -y
+      - run: sudo apt install qtdeclarative5-dev -y
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=OFF
       - run: cmake --build .
 #       - run: cmake --build . --target test
